update collision detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(windowsapi)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXE_LINKER_FLAGS "-static")
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES right.cpp)
 add_executable(windowsapi ${SOURCE_FILES})
